--- a/package.json
+++ b/package.json
@@ -10,12 +10,21 @@
   },
   "dependencies": {
     "@react-native-ml-kit/translate-text": "^0.4.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.2",
     "expo": "~51.0.21",
+    "expo-av": "~14.0.6",
+    "expo-file-system": "~17.0.1",
+    "expo-speech": "~12.0.2",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.4",
     "react": "18.2.0",
     "react-native": "0.74.3",
-    "react-native-responsive-screen": "^1.4.2"
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
